# fastled-wasm-server

./: .curserrules  API_CLIENT.md  CLAUDE.md  MCP_SERVER.md  README.md  analysis_report.md  install  lint  mcp_server.py  pyproject.toml  requirements.testing.txt  setup.py  task.md
examples/: api_client_example.py
src/fastled_wasm_server/: __init__.py  api_client.py  build.sh  cli_compile.py  cli_mcp.py  cli_server.py  code_sync.py  compile.py  compile_lock.py  debug.sh  entrypoint.sh  examples.py  init_runtime.py  libfastled_compiler.py  mcp_server.py  paths.py  print_banner.py  process_extended.py  pyproject.toml  run.py  server.py  server_compile.py  server_fetch_example.py  server_misc.py  server_serve_src_files.py  server_server_debug.py  server_update_live_git_repo.py  session_manager.py  sketch_hasher.py  types.py  upload_size_middleware.py  util.py
src/fastled_wasm_server/archive/: process-ino.py
tests/: test_api_client.py  test_cli.py  test_compile_libfastled.py  test_fetch_source_files.py.disabled  test_native_mode.py  test_native_server.py  test_no_platformio_complete.py  test_no_platformio_logic.py  test_session_manager.py  test_source_resolver.py
