[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastled_wasm_server"
readme = "README.md"
description = "fastled wasm server"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "fastled-wasm-compiler>=1.0.85",
    "fastapi==0.115.11",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "disklru>=2.0.4",
    "psutil==6.1.1",
    "wormhole-tx",
]
# Change this with the version number bump.
version = "1.0.90"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-xdist>=3.7.0",
    "ruff>=0.12.0",
]

[project.scripts]
fastled-wasm-server = "fastled_wasm_server.cli_compile:main"
